tests/suite/fail/regression/reg_move_8.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r8"
    take(s)
    print(s) //~ ERROR was moved
}
